--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <link rel="icon" type="image/x-icon" href="./contents/favicon.png">
+    <link rel="icon" type="image/x-icon" href="https://cravatar.eu/helmavatar/Blaackwz/192.png">
     <title>Blaack｜blaack.com.br</title>
 </head>
 
@@ -26,7 +26,7 @@
             <div id="social-medias">
                 <span>Check my profiles on:</span>
                 <div>
-                    <a href="http://twitter.com/fwlypee" target="_blank" id="twitter">
+                    <a href="http://twitter.com/fwlype" target="_blank" id="twitter">
                         <img src="./contents/twitter-logo.svg" alt="twitter-logo" class="social-logo">
                         <span>TWITTER</span>
                     </a>
