--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div id="content">
             <div id="presentation">
-                <h1>Hello!</h1>
+                <h1>Hi there!</h1>
                 <p>My name is Felype, but you can call me Blaack! I'm 16 years old and I'm very curious, always looking for knowledge about different subjects, mainly in the programming area.</p>
             </div>
             <div id="social-medias">
